--- a/css/login-style.css
+++ b/css/login-style.css
@@ -1,150 +1,194 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&amp;display=swap");
+@import url("https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css");
 * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins";
   box-sizing: border-box;
+  font-family: "Poppins";
 }
 
-.body-login {
+:root {
+  --primary-color: #c6c3c3;
+  --second-color: #ffffff;
+  --black-color: #000000;
+  --error-color: #ff0000;
+}
+
+body {
+  background-image: url("../img/pexels-lumn-167698.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+a {
+  text-decoration: none;
+  color: var(--second-color);
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.wrapper {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #1f293a;
   min-height: 100vh;
-}
-
-.container-login {
-  position: relative;
-  width: 256px;
-  height: 256px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.container-login span {
-  position: absolute;
-  left: 0;
-  width: 32px;
-  height: 6px;
-  background: #2c4766;
-  border-radius: 8px;
-  transform-origin: 128px;
-  transform: scale(2.2) rotate(calc(var(--i) * (360deg / 50)));
-  animation: animateBlink 3s linear infinite;
-  animation-delay: calc(var(--i) * (3s / 50));
-}
-
-@keyframes animateBlink {
-  0% {
-    background: #0ef;
-  }
-
-  25% {
-    background: #2c4766;
-  }
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .login-box {
+  position: relative;
+  width: 450px;
+  backdrop-filter: blur(10px);
+  border: 2px solid var(--primary-color);
+  border-radius: 15px;
+  padding: 7.5em 2.5em 4em 2.5em;
+  color: var(--second-color);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+.login-header {
   position: absolute;
-  width: 400px;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary-color);
+  width: 140px;
+  height: 70px;
+  border-radius: 0 0 20px 20px;
 }
 
-.login-box form {
-  width: 100%;
-  padding: 0 50px;
+.login-header span {
+  font-size: 30px;
+  color: var(--black-color);
 }
 
-.login-box h2 {
-  font-weight: 700;
-  font-size: 2em;
-  color: #0ef;
-  text-align: center;
+.login-header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -30px;
+  width: 30px;
+  height: 30px;
+  border-top-right-radius: 50%;
+  background: transparent;
+  box-shadow: 15px 0 0 0 var(--primary-color);
 }
+
+.login-header::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -30px;
+  width: 30px;
+  height: 30px;
+  border-top-left-radius: 50%;
+  background: transparent;
+  box-shadow: -15px 0 0 0 var(--primary-color); /* Removed space before --primary-color */
+}
+
 .input-box {
   position: relative;
-  margin: 25px 0;
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0;
 }
 
-.input-box input {
+.input-field {
+  width: 100%;
+  height: 55px;
+  font-size: 16px;
+  background: transparent;
+  color: var(--second-color);
+  padding-inline: 20px 50px;
+  border: 2px solid var(--primary-color);
+  border-radius: 30px;
+  outline: none;
+}
+
+#user {
+  margin-bottom: 10px;
+}
+
+.label {
+  color: var(--second-color);
+  font-weight: 200;
+  position: absolute;
+  top: 15px;
+  left: 20px;
+  transition: 0.2s;
+}
+
+/* El label hara lo sig si el input hermano en el mismo nivel
+ está enfocado, es válido o no posee placeholder y es inválido. */
+.input-field:focus ~ .label,
+.input-field:valid ~ .label,
+.input-field:not(:placeholder-shown):invalid ~ .label {
+  /* Added missing closing brace here */
+  position: absolute;
+  top: -10px;
+  left: 20px;
+  font-size: 14px;
+  background-color: var(--primary-color);
+  border-radius: 30px;
+  color: var(--black-color);
+  padding: 0 10px;
+} /* Closed the missing brace */
+
+/* Si el input no posee placeholder y es inválido*/
+.input-field:not(:placeholder-shown):invalid{
+  border-color: red;
+}
+.icon {
+  position: absolute;
+  top: 18px;
+  right: 25px;
+  font-size: 20px;
+}
+
+.remember-forgot {
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+}
+
+.input-submit {
   width: 100%;
   height: 50px;
-  background: transparent;
-  border: 2px solid #2c4766;
-  outline: none;
-  border-radius: 40px;
-  font-size: 1em;
-  color: #fff;
-  padding: 0 20px;
-  transition: 0.5s;
-}
-
-.input-box input:focus,
-.input-box input:valid {
-  border-color: #0ef;
-}
-
-.input-box label {
-  position: absolute;
-  top: 50%;
-  left: 20px;
-  transform: translateY(-50%);
-  font-size: 1em;
-  color: #fff;
-  pointer-events: none;
-  transition: 0.5s ease;
-}
-
-.input-box input:focus ~ label,
-.input-box input:valid ~ label {
-  top: 1px;
-  font-size: 0.8em;
-  background-color: #1f293a;
-  padding: 0 6px;
-  color: #0ef;
-}
-
-.forgot-password {
-  margin: -15px 0 10px;
-  text-align: center;
-}
-
-.forgot-password a {
-  font-size: 0.85em;
-  color: #fff;
-  text-decoration: none;
-}
-
-.forgot-password a:hover {
-  text-decoration: underline;
-}
-
-.btn-login {
-  width: 100%;
-  height: 45px;
-  border-radius: 45px;
-  background: #0ef;
+  background: #ececec;
+  font-size: 16px;
+  font-weight: 500;
   border: none;
-  outline: none;
+  border-radius: 30px;
   cursor: pointer;
-  font-size: 1em;
-  color: #1f293a;
-  font-weight: 700;
+  transition: 0.3s;
 }
 
-.signup-link {
-  margin: 20px 0 10px;
+.input-submit:hover {
+  background: var(--second-color);
+}
+
+.register {
   text-align: center;
 }
 
-.signup-link a {
-  font-size: 1em;
-  color: #0ef;
-  text-decoration: none;
-  font-weight: 600;
+.register a {
+  font-weight: 500;
 }
 
-.signup-link a:hover {
-  text-decoration: underline;
+@media only screen and (max-width: 564px) {
+  .wrapper {
+    padding: 20px;
+  }
+
+  .login-box {
+    padding: 7.5em 1.5em 4em 1.5em;
+  }
 }
