Se ajustó el fondo de pantalla en el front del login On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   css/login-style.css
	modified:   php/main.php
	modified:   vistas/login.php

--- a/css/login-style.css
+++ b/css/login-style.css
@@ -14,7 +14,7 @@
   --error-color: #ff0000;
 }
 
-body {
+.body-login {
   background-image: url("../img/pexels-lumn-167698.jpg");
   background-position: center;
   background-size: cover;
