--- a/css/login-style.css
+++ b/css/login-style.css
@@ -11,7 +11,7 @@
   --primary-color: #c6c3c3;
   --second-color: #ffffff;
   --black-color: #000000;
-  --error-color: #ff0000;
+  --error-color: #ff000081;
 }
 
 .body-login {
@@ -45,7 +45,7 @@ a:hover {
   position: relative;
   width: 450px;
   backdrop-filter: blur(10px);
-  border: 2px solid var(--primary-color);
+  border: 2px solid rgba(255, 255, 255, 0.5);
   border-radius: 15px;
   padding: 7.5em 2.5em 4em 2.5em;
   color: var(--second-color);
@@ -163,7 +163,7 @@ a:hover {
 .input-submit {
   width: 100%;
   height: 50px;
-  background: #ececec;
+  background: rgba(236, 236, 236, 0.5);
   font-size: 16px;
   font-weight: 500;
   border: none;
